parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    comment

Grammar

Rule 0     S' -> prog
Rule 1     prog -> empty
Rule 2     prog -> func prog
Rule 3     empty -> <empty>
Rule 4     func -> defid type iden lparen flist rparen lc body rc
Rule 5     func -> defid error iden lparen flist rparen lc body rc
Rule 6     func -> defid type iden lparen error rparen lc body rc
Rule 7     func -> defid error iden lparen error rparen lc body rc
Rule 8     type -> intid
Rule 9     type -> strid
Rule 10    type -> vectorid
Rule 11    type -> nullid
Rule 12    body -> empty
Rule 13    body -> stmt body
Rule 14    stmt -> expr sc
Rule 15    stmt -> defvar sc
Rule 16    stmt -> single_if
Rule 17    stmt -> else_if
Rule 18    stmt -> while_loop
Rule 19    stmt -> for_loop
Rule 20    stmt -> return_is sc
Rule 21    stmt -> block
Rule 22    stmt -> func
Rule 23    return_is -> return expr
Rule 24    while_loop -> whileid lparen expr rparen stmt
Rule 25    for_loop -> forl lparen iden equal expr toid expr rparen stmt
Rule 26    block -> lc body rc
Rule 27    single_if -> ifid lparen expr rparen stmt
Rule 28    single_if -> ifid lparen error rparen stmt
Rule 29    else_if -> ifid lparen expr rparen stmt elseid stmt
Rule 30    else_if -> ifid lparen error rparen stmt elseid stmt
Rule 31    while_loop -> whileid lparen error rparen stmt
Rule 32    for_loop -> forl lparen iden equal error toid expr rparen stmt
Rule 33    for_loop -> forl lparen iden equal expr toid error rparen stmt
Rule 34    for_loop -> forl lparen iden equal error toid error rparen stmt
Rule 35    defvar -> varid type iden
Rule 36    defvar -> varid type iden equal expr
Rule 37    defvar -> varid error iden
Rule 38    defvar -> varid error iden equal expr
Rule 39    defvar -> error type iden
Rule 40    defvar -> error type iden equal expr
Rule 41    flist -> empty
Rule 42    flist -> type iden
Rule 43    flist -> type iden kama flist
Rule 44    flist -> error iden
Rule 45    flist -> error iden kama flist
Rule 46    flist -> type error
Rule 47    flist -> type error kama flist
Rule 48    flist -> type iden kama error
Rule 49    clist -> empty
Rule 50    clist -> expr
Rule 51    clist -> expr kama clist
Rule 52    clist -> expr error clist
Rule 53    expr -> on_list
Rule 54    expr -> expr_list
Rule 55    expr -> ternary_expr
Rule 56    expr -> not expr
Rule 57    expr -> plus expr
Rule 58    expr -> minus expr
Rule 59    expr -> binary_expr
Rule 60    expr -> string
Rule 61    expr -> builtin_methods
Rule 62    expr -> assignment
Rule 63    expr -> number
Rule 64    expr -> iden
Rule 65    expr -> func_call
Rule 66    func_call -> iden lparen clist rparen
Rule 67    on_list -> expr lb expr rb
Rule 68    on_list -> iden lb expr rb
Rule 69    assignment -> iden equal expr
Rule 70    assignment -> iden error expr
Rule 71    expr_list -> lb clist rb
Rule 72    ternary_expr -> expr qmark expr ddot expr
Rule 73    ternary_expr -> expr error expr ddot expr
Rule 74    binary_expr -> expr plus expr
Rule 75    binary_expr -> expr minus expr
Rule 76    binary_expr -> expr multiplier expr
Rule 77    binary_expr -> expr divide expr
Rule 78    binary_expr -> expr remain expr
Rule 79    binary_expr -> expr great expr
Rule 80    binary_expr -> expr less expr
Rule 81    binary_expr -> expr equals expr
Rule 82    binary_expr -> expr eqgrt expr
Rule 83    binary_expr -> expr eqles expr
Rule 84    binary_expr -> expr noteq expr
Rule 85    binary_expr -> expr or expr
Rule 86    binary_expr -> expr and expr
Rule 87    binary_expr -> expr error expr
Rule 88    builtin_methods -> scanm lparen rparen
Rule 89    builtin_methods -> printm lparen clist rparen
Rule 90    builtin_methods -> listm lparen clist rparen
Rule 91    builtin_methods -> lengthm lparen clist rparen
Rule 92    builtin_methods -> exitm lparen clist rparen

Terminals, with rules where they appear

and                  : 86
comment              : 
ddot                 : 72 73
defid                : 4 5 6 7
divide               : 77
elseid               : 29 30
eqgrt                : 82
eqles                : 83
equal                : 25 32 33 34 36 38 40 69
equals               : 81
error                : 5 6 7 7 28 30 31 32 33 34 34 37 38 39 40 44 45 46 47 48 52 70 73 87
exitm                : 92
forl                 : 25 32 33 34
great                : 79
iden                 : 4 5 6 7 25 32 33 34 35 36 37 38 39 40 42 43 44 45 48 64 66 68 69 70
ifid                 : 27 28 29 30
intid                : 8
kama                 : 43 45 47 48 51
lb                   : 67 68 71
lc                   : 4 5 6 7 26
lengthm              : 91
less                 : 80
listm                : 90
lparen               : 4 5 6 7 24 25 27 28 29 30 31 32 33 34 66 88 89 90 91 92
minus                : 58 75
multiplier           : 76
not                  : 56
noteq                : 84
nullid               : 11
number               : 63
or                   : 85
plus                 : 57 74
printm               : 89
qmark                : 72
rb                   : 67 68 71
rc                   : 4 5 6 7 26
remain               : 78
return               : 23
rparen               : 4 5 6 7 24 25 27 28 29 30 31 32 33 34 66 88 89 90 91 92
sc                   : 14 15 20
scanm                : 88
strid                : 9
string               : 60
toid                 : 25 32 33 34
varid                : 35 36 37 38
vectorid             : 10
whileid              : 24 31

Nonterminals, with rules where they appear

assignment           : 62
binary_expr          : 59
block                : 21
body                 : 4 5 6 7 13 26
builtin_methods      : 61
clist                : 51 52 66 71 89 90 91 92
defvar               : 15
else_if              : 17
empty                : 1 12 41 49
expr                 : 14 23 24 25 25 27 29 32 33 36 38 40 50 51 52 56 57 58 67 67 68 69 70 72 72 72 73 73 73 74 74 75 75 76 76 77 77 78 78 79 79 80 80 81 81 82 82 83 83 84 84 85 85 86 86 87 87
expr_list            : 54
flist                : 4 5 43 45 47
for_loop             : 19
func                 : 2 22
func_call            : 65
on_list              : 53
prog                 : 2 0
return_is            : 20
single_if            : 16
stmt                 : 13 24 25 27 28 29 29 30 30 31 32 33 34
ternary_expr         : 55
type                 : 4 6 35 36 39 40 42 43 46 47 48
while_loop           : 18

Parsing method: LALR

state 0

    (0) S' -> . prog
    (1) prog -> . empty
    (2) prog -> . func prog
    (3) empty -> .
    (4) func -> . defid type iden lparen flist rparen lc body rc
    (5) func -> . defid error iden lparen flist rparen lc body rc
    (6) func -> . defid type iden lparen error rparen lc body rc
    (7) func -> . defid error iden lparen error rparen lc body rc

    $end            reduce using rule 3 (empty -> .)
    defid           shift and go to state 4

    prog                           shift and go to state 1
    empty                          shift and go to state 2
    func                           shift and go to state 3

state 1

    (0) S' -> prog .



state 2

    (1) prog -> empty .

    $end            reduce using rule 1 (prog -> empty .)


state 3

    (2) prog -> func . prog
    (1) prog -> . empty
    (2) prog -> . func prog
    (3) empty -> .
    (4) func -> . defid type iden lparen flist rparen lc body rc
    (5) func -> . defid error iden lparen flist rparen lc body rc
    (6) func -> . defid type iden lparen error rparen lc body rc
    (7) func -> . defid error iden lparen error rparen lc body rc

    $end            reduce using rule 3 (empty -> .)
    defid           shift and go to state 4

    func                           shift and go to state 3
    prog                           shift and go to state 5
    empty                          shift and go to state 2

state 4

    (4) func -> defid . type iden lparen flist rparen lc body rc
    (5) func -> defid . error iden lparen flist rparen lc body rc
    (6) func -> defid . type iden lparen error rparen lc body rc
    (7) func -> defid . error iden lparen error rparen lc body rc
    (8) type -> . intid
    (9) type -> . strid
    (10) type -> . vectorid
    (11) type -> . nullid

    error           shift and go to state 7
    intid           shift and go to state 8
    strid           shift and go to state 9
    vectorid        shift and go to state 10
    nullid          shift and go to state 11

    type                           shift and go to state 6

state 5

    (2) prog -> func prog .

    $end            reduce using rule 2 (prog -> func prog .)


state 6

    (4) func -> defid type . iden lparen flist rparen lc body rc
    (6) func -> defid type . iden lparen error rparen lc body rc

    iden            shift and go to state 12


state 7

    (5) func -> defid error . iden lparen flist rparen lc body rc
    (7) func -> defid error . iden lparen error rparen lc body rc

    iden            shift and go to state 13


state 8

    (8) type -> intid .

    iden            reduce using rule 8 (type -> intid .)
    error           reduce using rule 8 (type -> intid .)


state 9

    (9) type -> strid .

    iden            reduce using rule 9 (type -> strid .)
    error           reduce using rule 9 (type -> strid .)


state 10

    (10) type -> vectorid .

    iden            reduce using rule 10 (type -> vectorid .)
    error           reduce using rule 10 (type -> vectorid .)


state 11

    (11) type -> nullid .

    iden            reduce using rule 11 (type -> nullid .)
    error           reduce using rule 11 (type -> nullid .)


state 12

    (4) func -> defid type iden . lparen flist rparen lc body rc
    (6) func -> defid type iden . lparen error rparen lc body rc

    lparen          shift and go to state 14


state 13

    (5) func -> defid error iden . lparen flist rparen lc body rc
    (7) func -> defid error iden . lparen error rparen lc body rc

    lparen          shift and go to state 15


state 14

    (4) func -> defid type iden lparen . flist rparen lc body rc
    (6) func -> defid type iden lparen . error rparen lc body rc
    (41) flist -> . empty
    (42) flist -> . type iden
    (43) flist -> . type iden kama flist
    (44) flist -> . error iden
    (45) flist -> . error iden kama flist
    (46) flist -> . type error
    (47) flist -> . type error kama flist
    (48) flist -> . type iden kama error
    (3) empty -> .
    (8) type -> . intid
    (9) type -> . strid
    (10) type -> . vectorid
    (11) type -> . nullid

    error           shift and go to state 18
    rparen          reduce using rule 3 (empty -> .)
    intid           shift and go to state 8
    strid           shift and go to state 9
    vectorid        shift and go to state 10
    nullid          shift and go to state 11

    type                           shift and go to state 16
    flist                          shift and go to state 17
    empty                          shift and go to state 19

state 15

    (5) func -> defid error iden lparen . flist rparen lc body rc
    (7) func -> defid error iden lparen . error rparen lc body rc
    (41) flist -> . empty
    (42) flist -> . type iden
    (43) flist -> . type iden kama flist
    (44) flist -> . error iden
    (45) flist -> . error iden kama flist
    (46) flist -> . type error
    (47) flist -> . type error kama flist
    (48) flist -> . type iden kama error
    (3) empty -> .
    (8) type -> . intid
    (9) type -> . strid
    (10) type -> . vectorid
    (11) type -> . nullid

    error           shift and go to state 20
    rparen          reduce using rule 3 (empty -> .)
    intid           shift and go to state 8
    strid           shift and go to state 9
    vectorid        shift and go to state 10
    nullid          shift and go to state 11

    flist                          shift and go to state 21
    empty                          shift and go to state 19
    type                           shift and go to state 16

state 16

    (42) flist -> type . iden
    (43) flist -> type . iden kama flist
    (46) flist -> type . error
    (47) flist -> type . error kama flist
    (48) flist -> type . iden kama error

    iden            shift and go to state 22
    error           shift and go to state 23


state 17

    (4) func -> defid type iden lparen flist . rparen lc body rc

    rparen          shift and go to state 24


state 18

    (6) func -> defid type iden lparen error . rparen lc body rc
    (44) flist -> error . iden
    (45) flist -> error . iden kama flist

    rparen          shift and go to state 26
    iden            shift and go to state 25


state 19

    (41) flist -> empty .

    rparen          reduce using rule 41 (flist -> empty .)


state 20

    (7) func -> defid error iden lparen error . rparen lc body rc
    (44) flist -> error . iden
    (45) flist -> error . iden kama flist

    rparen          shift and go to state 27
    iden            shift and go to state 25


state 21

    (5) func -> defid error iden lparen flist . rparen lc body rc

    rparen          shift and go to state 28


state 22

    (42) flist -> type iden .
    (43) flist -> type iden . kama flist
    (48) flist -> type iden . kama error

    rparen          reduce using rule 42 (flist -> type iden .)
    kama            shift and go to state 29


state 23

    (46) flist -> type error .
    (47) flist -> type error . kama flist

    rparen          reduce using rule 46 (flist -> type error .)
    kama            shift and go to state 30


state 24

    (4) func -> defid type iden lparen flist rparen . lc body rc

    lc              shift and go to state 31


state 25

    (44) flist -> error iden .
    (45) flist -> error iden . kama flist

    rparen          reduce using rule 44 (flist -> error iden .)
    kama            shift and go to state 32


state 26

    (6) func -> defid type iden lparen error rparen . lc body rc

    lc              shift and go to state 33


state 27

    (7) func -> defid error iden lparen error rparen . lc body rc

    lc              shift and go to state 34


state 28

    (5) func -> defid error iden lparen flist rparen . lc body rc

    lc              shift and go to state 35


state 29

    (43) flist -> type iden kama . flist
    (48) flist -> type iden kama . error
    (41) flist -> . empty
    (42) flist -> . type iden
    (43) flist -> . type iden kama flist
    (44) flist -> . error iden
    (45) flist -> . error iden kama flist
    (46) flist -> . type error
    (47) flist -> . type error kama flist
    (48) flist -> . type iden kama error
    (3) empty -> .
    (8) type -> . intid
    (9) type -> . strid
    (10) type -> . vectorid
    (11) type -> . nullid

    error           shift and go to state 37
    rparen          reduce using rule 3 (empty -> .)
    intid           shift and go to state 8
    strid           shift and go to state 9
    vectorid        shift and go to state 10
    nullid          shift and go to state 11

    type                           shift and go to state 16
    flist                          shift and go to state 36
    empty                          shift and go to state 19

state 30

    (47) flist -> type error kama . flist
    (41) flist -> . empty
    (42) flist -> . type iden
    (43) flist -> . type iden kama flist
    (44) flist -> . error iden
    (45) flist -> . error iden kama flist
    (46) flist -> . type error
    (47) flist -> . type error kama flist
    (48) flist -> . type iden kama error
    (3) empty -> .
    (8) type -> . intid
    (9) type -> . strid
    (10) type -> . vectorid
    (11) type -> . nullid

    error           shift and go to state 38
    rparen          reduce using rule 3 (empty -> .)
    intid           shift and go to state 8
    strid           shift and go to state 9
    vectorid        shift and go to state 10
    nullid          shift and go to state 11

    type                           shift and go to state 16
    flist                          shift and go to state 39
    empty                          shift and go to state 19

state 31

    (4) func -> defid type iden lparen flist rparen lc . body rc
    (12) body -> . empty
    (13) body -> . stmt body
    (3) empty -> .
    (14) stmt -> . expr sc
    (15) stmt -> . defvar sc
    (16) stmt -> . single_if
    (17) stmt -> . else_if
    (18) stmt -> . while_loop
    (19) stmt -> . for_loop
    (20) stmt -> . return_is sc
    (21) stmt -> . block
    (22) stmt -> . func
    (53) expr -> . on_list
    (54) expr -> . expr_list
    (55) expr -> . ternary_expr
    (56) expr -> . not expr
    (57) expr -> . plus expr
    (58) expr -> . minus expr
    (59) expr -> . binary_expr
    (60) expr -> . string
    (61) expr -> . builtin_methods
    (62) expr -> . assignment
    (63) expr -> . number
    (64) expr -> . iden
    (65) expr -> . func_call
    (35) defvar -> . varid type iden
    (36) defvar -> . varid type iden equal expr
    (37) defvar -> . varid error iden
    (38) defvar -> . varid error iden equal expr
    (39) defvar -> . error type iden
    (40) defvar -> . error type iden equal expr
    (27) single_if -> . ifid lparen expr rparen stmt
    (28) single_if -> . ifid lparen error rparen stmt
    (29) else_if -> . ifid lparen expr rparen stmt elseid stmt
    (30) else_if -> . ifid lparen error rparen stmt elseid stmt
    (24) while_loop -> . whileid lparen expr rparen stmt
    (31) while_loop -> . whileid lparen error rparen stmt
    (25) for_loop -> . forl lparen iden equal expr toid expr rparen stmt
    (32) for_loop -> . forl lparen iden equal error toid expr rparen stmt
    (33) for_loop -> . forl lparen iden equal expr toid error rparen stmt
    (34) for_loop -> . forl lparen iden equal error toid error rparen stmt
    (23) return_is -> . return expr
    (26) block -> . lc body rc
    (4) func -> . defid type iden lparen flist rparen lc body rc
    (5) func -> . defid error iden lparen flist rparen lc body rc
    (6) func -> . defid type iden lparen error rparen lc body rc
    (7) func -> . defid error iden lparen error rparen lc body rc
    (67) on_list -> . expr lb expr rb
    (68) on_list -> . iden lb expr rb
    (71) expr_list -> . lb clist rb
    (72) ternary_expr -> . expr qmark expr ddot expr
    (73) ternary_expr -> . expr error expr ddot expr
    (74) binary_expr -> . expr plus expr
    (75) binary_expr -> . expr minus expr
    (76) binary_expr -> . expr multiplier expr
    (77) binary_expr -> . expr divide expr
    (78) binary_expr -> . expr remain expr
    (79) binary_expr -> . expr great expr
    (80) binary_expr -> . expr less expr
    (81) binary_expr -> . expr equals expr
    (82) binary_expr -> . expr eqgrt expr
    (83) binary_expr -> . expr eqles expr
    (84) binary_expr -> . expr noteq expr
    (85) binary_expr -> . expr or expr
    (86) binary_expr -> . expr and expr
    (87) binary_expr -> . expr error expr
    (88) builtin_methods -> . scanm lparen rparen
    (89) builtin_methods -> . printm lparen clist rparen
    (90) builtin_methods -> . listm lparen clist rparen
    (91) builtin_methods -> . lengthm lparen clist rparen
    (92) builtin_methods -> . exitm lparen clist rparen
    (69) assignment -> . iden equal expr
    (70) assignment -> . iden error expr
    (66) func_call -> . iden lparen clist rparen

    rc              reduce using rule 3 (empty -> .)
    not             shift and go to state 57
    plus            shift and go to state 58
    minus           shift and go to state 59
    string          shift and go to state 61
    number          shift and go to state 64
    iden            shift and go to state 40
    varid           shift and go to state 66
    error           shift and go to state 67
    ifid            shift and go to state 68
    whileid         shift and go to state 69
    forl            shift and go to state 70
    return          shift and go to state 71
    lc              shift and go to state 41
    defid           shift and go to state 4
    lb              shift and go to state 72
    scanm           shift and go to state 73
    printm          shift and go to state 74
    listm           shift and go to state 75
    lengthm         shift and go to state 76
    exitm           shift and go to state 77

    body                           shift and go to state 42
    empty                          shift and go to state 43
    stmt                           shift and go to state 44
    expr                           shift and go to state 45
    defvar                         shift and go to state 46
    single_if                      shift and go to state 47
    else_if                        shift and go to state 48
    while_loop                     shift and go to state 49
    for_loop                       shift and go to state 50
    return_is                      shift and go to state 51
    block                          shift and go to state 52
    func                           shift and go to state 53
    on_list                        shift and go to state 54
    expr_list                      shift and go to state 55
    ternary_expr                   shift and go to state 56
    binary_expr                    shift and go to state 60
    builtin_methods                shift and go to state 62
    assignment                     shift and go to state 63
    func_call                      shift and go to state 65

state 32

    (45) flist -> error iden kama . flist
    (41) flist -> . empty
    (42) flist -> . type iden
    (43) flist -> . type iden kama flist
    (44) flist -> . error iden
    (45) flist -> . error iden kama flist
    (46) flist -> . type error
    (47) flist -> . type error kama flist
    (48) flist -> . type iden kama error
    (3) empty -> .
    (8) type -> . intid
    (9) type -> . strid
    (10) type -> . vectorid
    (11) type -> . nullid

    error           shift and go to state 38
    rparen          reduce using rule 3 (empty -> .)
    intid           shift and go to state 8
    strid           shift and go to state 9
    vectorid        shift and go to state 10
    nullid          shift and go to state 11

    flist                          shift and go to state 78
    empty                          shift and go to state 19
    type                           shift and go to state 16

state 33

    (6) func -> defid type iden lparen error rparen lc . body rc
    (12) body -> . empty
    (13) body -> . stmt body
    (3) empty -> .
    (14) stmt -> . expr sc
    (15) stmt -> . defvar sc
    (16) stmt -> . single_if
    (17) stmt -> . else_if
    (18) stmt -> . while_loop
    (19) stmt -> . for_loop
    (20) stmt -> . return_is sc
    (21) stmt -> . block
    (22) stmt -> . func
    (53) expr -> . on_list
    (54) expr -> . expr_list
    (55) expr -> . ternary_expr
    (56) expr -> . not expr
    (57) expr -> . plus expr
    (58) expr -> . minus expr
    (59) expr -> . binary_expr
    (60) expr -> . string
    (61) expr -> . builtin_methods
    (62) expr -> . assignment
    (63) expr -> . number
    (64) expr -> . iden
    (65) expr -> . func_call
    (35) defvar -> . varid type iden
    (36) defvar -> . varid type iden equal expr
    (37) defvar -> . varid error iden
    (38) defvar -> . varid error iden equal expr
    (39) defvar -> . error type iden
    (40) defvar -> . error type iden equal expr
    (27) single_if -> . ifid lparen expr rparen stmt
    (28) single_if -> . ifid lparen error rparen stmt
    (29) else_if -> . ifid lparen expr rparen stmt elseid stmt
    (30) else_if -> . ifid lparen error rparen stmt elseid stmt
    (24) while_loop -> . whileid lparen expr rparen stmt
    (31) while_loop -> . whileid lparen error rparen stmt
    (25) for_loop -> . forl lparen iden equal expr toid expr rparen stmt
    (32) for_loop -> . forl lparen iden equal error toid expr rparen stmt
    (33) for_loop -> . forl lparen iden equal expr toid error rparen stmt
    (34) for_loop -> . forl lparen iden equal error toid error rparen stmt
    (23) return_is -> . return expr
    (26) block -> . lc body rc
